--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # MongoDB connection string
-MONGODB_URI=mongodb://localhost:27017/plateformeDB
+MONGODB_URI=mongodb+srv://yessin123rekik_db_user:lm6hCzEUJAwDBmuu@cluster0.vpxpusw.mongodb.net/plateformeDB?retryWrites=true&w=majority
 
 # Optional: override db name for import
 IMPORT_DB=plateformeDB
@@ -13,3 +13,15 @@ PORT=4000
 # Auth
 JWT_SECRET=a4b43320-7cb5-48d1-ba0e-3a8fced8dd5a
 JWT_EXPIRES_IN=2h
+
+# Email configuration (Mailtrap)
+MAILTRAP_HOST=sandbox.smtp.mailtrap.io
+MAILTRAP_PORT=2525
+MAILTRAP_USER=55e3a8ed659d73
+MAILTRAP_PASS=5a42aaf71f7e02
+MAILTRAP_FROM=noreply@smartplantcare.com
+PASSWORD_RESET_TOKEN_TTL_MINUTES=15
+FRONTEND_URL=http://localhost:5173
+
+# Optional: Return reset URL in API response (for testing)
+# RETURN_RESET_URL=true
