--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "@radix-ui/react-slot": "1.1.2",
     "@radix-ui/react-switch": "1.1.3",
     "@radix-ui/react-tabs": "1.1.3",
-    "@radix-ui/react-toggle-group": "1.1.2",
     "@radix-ui/react-toggle": "1.1.2",
+    "@radix-ui/react-toggle-group": "1.1.2",
     "@radix-ui/react-tooltip": "1.1.8",
-    "bson": "6.10.2",
     "bcryptjs": "2.4.3",
+    "bson": "6.10.2",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "cmdk": "1.1.1",
@@ -58,6 +58,7 @@
     "mongoose": "8.9.0",
     "motion": "12.23.24",
     "next-themes": "0.4.6",
+    "nodemailer": "^7.0.13",
     "react-day-picker": "8.10.1",
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
