--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,10 @@
 services:
-  mongo:
-    image: mongo:7
-    restart: unless-stopped
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongo_data:/data/db
-
   app:
     build:
       context: .
       args:
         VITE_API_URL: http://localhost:4000
-    environment:
-      PORT: 4000
-      MONGODB_URI: mongodb://mongo:27017/pfe
-      JWT_SECRET: change-me
-      JWT_EXPIRES_IN: 2h
+    env_file:
+      - .env
     ports:
       - "4000:4000"
-    depends_on:
-      - mongo
-
-volumes:
-  mongo_data:
