--- a/.env
+++ b/.env
@@ -23,5 +23,9 @@ MAILTRAP_FROM=noreply@smartplantcare.com
 PASSWORD_RESET_TOKEN_TTL_MINUTES=15
 FRONTEND_URL=http://localhost:5173
 
+# Plant recognition APIs
+PLANT_ID_API_URL=https://plant.id/api/v3
+PLANT_ID_API_KEY=pNQ5XzHhoqkZCdTGk8K9rVMtpmCKBjVEUkQ0MzveLdLCM6mMwY
+
 # Optional: Return reset URL in API response (for testing)
 # RETURN_RESET_URL=true
