--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ JWT_EXPIRES_IN=2h
 
 # Frontend API base URL (Vite)
 VITE_API_URL=http://localhost:4000
+
+# Plant recognition APIs
+PLANT_ID_API_URL=https://plant.id/api/v3
+PLANT_ID_API_KEY=replace-with-plant-id-key
